fix eslint setting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,15 @@
     "es2021": true
   },
   "extends": ["airbnb", "airbnb/hooks", "prettier", "prettier/react"],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": "latest",
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks"],
