update eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,12 +17,14 @@
   },
   "plugins": ["react", "react-hooks"],
   "rules": {
-    "no-unused-expressions": "off", // cảnh báo một biểu thức không được sử dụng và ko liên quan đến logic
-    "no-unused-vars": 0, // các biến không được sử dụng -  recommened
-    "no-constant-condition": 0, //if(true, flase) .... - recommened
+    "import/no-named-as-default": 0,
+    "import/no-named-as-default-member": 0,
+    "no-unused-expressions": 1, // cảnh báo một biểu thức không được sử dụng và ko liên quan đến logic
+    "no-unused-vars": 1, // các biến không được sử dụng -  recommened
+    "no-constant-condition": 1, //if(true, flase) .... - recommened
     "no-await-in-loop": 0, // không tận dụng được lợi thế của async/await(vd await từng phần tử trong vòng for)
     "no-return-await": 0, // lỗi khi sử dụng return await
-    "no-empty": "off", // các khối trống(vd: if(foo){}, while(foo){})- recommened
+    "no-empty": 1, // các khối trống(vd: if(foo){}, while(foo){})- recommened
     "no-continue": "off", // sử dụng sai cách từ khoá continue
     "arrow-parens": "off", // sử dụng nhất quán dấu ngoặc đơn ở các arrow function - recommend
     "arrow-body-style": "off", // Có thể thực thi hoặc không cho phép sử dụng dấu ngoặc nhọn xung quanh thân hàm arrow.- recommened
@@ -58,8 +60,6 @@
         ],
         "unnamedComponents": ["function-expression", "arrow-function"]
       }
-    ],
-    "import/no-named-as-default": 0,
-    "import/no-named-as-default-member": 0
+    ]
   }
 }
