--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
+  "root": true,
   "env": {
     "browser": true,
-    "es2021": true
+    "es6": true
   },
   "extends": ["airbnb", "airbnb/hooks", "prettier"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -15,16 +17,20 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks"],
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  },
   "rules": {
     "import/no-named-as-default": 0,
     "import/no-named-as-default-member": 0,
-    "no-unused-expressions": 1, // cảnh báo một biểu thức không được sử dụng và ko liên quan đến logic
-    "no-unused-vars": 1, // các biến không được sử dụng -  recommened
-    "no-constant-condition": 1, //if(true, flase) .... - recommened
+    "no-unused-expressions": "off", // cảnh báo một biểu thức không được sử dụng và ko liên quan đến logic
+    "no-unused-vars": 0, // các biến không được sử dụng -  recommened
+    "no-constant-condition": 0, //if(true, flase) .... - recommened
     "no-await-in-loop": 0, // không tận dụng được lợi thế của async/await(vd await từng phần tử trong vòng for)
     "no-return-await": 0, // lỗi khi sử dụng return await
-    "no-empty": 1, // các khối trống(vd: if(foo){}, while(foo){})- recommened
+    "no-empty": "off", // các khối trống(vd: if(foo){}, while(foo){})- recommened
     "no-continue": "off", // sử dụng sai cách từ khoá continue
     "arrow-parens": "off", // sử dụng nhất quán dấu ngoặc đơn ở các arrow function - recommend
     "arrow-body-style": "off", // Có thể thực thi hoặc không cho phép sử dụng dấu ngoặc nhọn xung quanh thân hàm arrow.- recommened
@@ -37,19 +43,14 @@
     "import/prefer-default-export": 0,
     "react/state-in-constructor": "off",
     "react/jsx-no-duplicate-props": "off",
-    "react/prop-types": [2],
+    "react/prop-types": [0],
     "react/jsx-wrap-multilines": "off",
     "react/jsx-props-no-spreading": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [".jsx", ".js"]
-      }
-    ],
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/no-array-index-key": "off",
+    "react/require-default-props": "off",
     "react/function-component-definition": [
       "error",
       {
