--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     }
   },
   "rules": {
+    "no-undef": 0,
     "no-lone-blocks": 0,
     "import/no-named-as-default": 0,
     "import/no-named-as-default-member": 0,
