--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "xlsx": "^0.18.5",
