--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.27",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/styles": "^4.11.5",
@@ -27,9 +26,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.2.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "xlsx": "^0.18.5",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
